--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 
 .App-header {
     width: 100%;
-    background-color: #282c34;
+    background-color: rgb(255, 0, 200);
     min-height: 40vh;
     display: flex;
     flex-direction: column;
@@ -24,6 +24,10 @@
     font-size: calc(10px + 2vmin);
     color: white;
 }
+/* 
+.App-rectangle {
+    background-color: red;
+} */
 
 .App-link {
     color: #61dafb;
